--- a/QM_bib.bib
+++ b/QM_bib.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Moritz Trinkner at 2024-02-15 19:58:34 +0100 
+%% Created for Moritz Trinkner at 2024-02-15 21:29:12 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{oecd,
+	author = {OECD},
+	date-added = {2024-02-15 21:23:05 +0100},
+	date-modified = {2024-02-15 21:25:54 +0100},
+	note = {(Accessed 15 Feb 2024)},
+	title = {Gender wage gap},
+	url = {https://data-explorer.oecd.org/vis},
+	year = {2023}}
 
 @article{NYT06,
 	author = {Greenhouse, Steven and Barbaro, Michael},
